--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "part3-fsopen",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "name": "phonebook",
+  "private": true,
+  "version": "0.0.0",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "oatlayers",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "json-server": "^0.17.3",
+    "nodemon": "^3.0.3",
+    "vite": "^4.4.5"
   }
 }
